apps/base/syncthing/database/syncthing.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing-system
  labels:
    networking.tinyrack.net/isolation: enabled
