apps/base/syncthing/database/syncthing.database.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-syncthing
  namespace: syncthing-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: syncthing-system
        cnpg.io/cluster: syncthing-database-cluster
    ingress:
      # JuiceFS CSI mount pods use this cluster as the JuiceFS metadata engine.
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              app: juicefs-csi-node
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              app.kubernetes.io/name: juicefs-mount
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg-system
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "9187"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: syncthing-system
              cnpg.io/cluster: syncthing-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: syncthing-system
              cnpg.io/cluster: syncthing-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
      # Barman object storage backups go through internal Traefik (Garage S3).
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
